testsuite/tests/polykinds/T15787.stderr

T15787.hs:15:43: error:
    • Expected kind ‘ob1’, but ‘k’ has kind ‘*’
      ‘ob1’ is a rigid type variable bound by
        the data constructor ‘Kl’
        at T15787.hs:15:3-43
    • In the second argument of ‘Kl_kind’, namely ‘k’
      In the type ‘Kl_kind (m :: ob -> ob) k’
      In the definition of data constructor ‘Kl’
